# SocketServer

./: CMakeLists.txt  Dockerfile  README.md
client/: CMakeLists.txt
client/src/: main.cpp
example/EchoServer/client/: CMakeLists.txt
example/EchoServer/client/src/: main.cpp
example/EchoServer/server/: CMakeLists.txt
example/EchoServer/server/inc/: cli.h
example/EchoServer/server/src/: main.cpp
lib/: CMakeLists.txt
lib/inc/: CRTPBase.hpp  FdBaseTcp.hpp  FdBaseUdp.hpp  FdBaseUds.hpp  PThread.hpp  SocketServer.hpp
lib/src/: FdBaseTcp.cpp  FdBaseUdp.cpp  FdBaseUds.cpp  PThread.cpp  SocketServer.cpp
lib/test/: CMakeLists.txt
lib/test/src/: main.cpp  test_packet.cpp  test_server.cpp
server/: CMakeLists.txt
server/src/: main.cpp
